change iframe spacing for widths under 400 to prevent sources from going under 320, refactor

--- a/public/contact.css
+++ b/public/contact.css
@@ -54,10 +54,9 @@ textarea,
 }
 .send-message-button {
   width: 100%;
-  font-weight: 300;
+  font-weight: 200;
   font-size: 24px;
   padding: 8px;
-  /* padding: 4px; */
   background-color: var(--dark);
   border: 1px solid var(--dark);
   color: white;
